SERVER-41306 In FCV 4.0, don't treat transactions as retryable writes

(cherry picked from commit c7f1e4270b8dcbc09e6b2952671c70f5274401de)